chore: add react router dom

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mantine/hooks": "^7.17.5",
     "@mantine/notifications": "^7.17.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
