--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: 🛠️ Build Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/russian-cheatsheet-front:${{ github.ref_name }} -f ./src/main/docker/Dockerfile.native-micro .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/russian-cheatsheet-front:${{ github.ref_name }} .
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
