--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.17.5",
     "@mantine/hooks": "^7.17.5",
     "@mantine/notifications": "^7.17.5",
+    "@tabler/icons-react": "^3.31.0",
     "keycloak-js": "^26.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
