--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: 🔽 Checkout
         uses: actions/checkout@v4
 
-      - name: Install SDKMAN!
+      - name: Install NodeJS!
         run: |
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.2/install.sh | bash
           \. "$HOME/.nvm/nvm.sh"
@@ -32,6 +32,7 @@ jobs:
 
       - name: 🛠️ Build Application
         run: |
+          mv .env.cloud .env
           yarn build
 
       - name: 🛠️ Upload Build Artifacts
