--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "keycloak-js": "^26.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "6.0.0",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
