--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   ci:
-    name: 🔄 Continuous Integration
+    name: 🛠️ Build
     runs-on: ubuntu-latest
 
     steps:
@@ -42,7 +42,7 @@ jobs:
           path: dist/
 
   docker:
-    name: 🛠️ Build and Push Docker Image
+    name: 🐋 Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: ci
 
